--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -41,6 +41,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
             <hc:TextBox
@@ -50,13 +51,12 @@
                 hc:InfoElement.ShowClearButton="True"
                 BorderBrush="{DynamicResource DevKitBorderBrush}"
                 FontSize="14"
-                MaxLength="7"
                 Text="{Binding UserInputColorHexValue}" />
 
             <Border
                 Grid.Row="1"
                 Margin="0,10"
-                Background="{Binding ColorBrush}"
+                Background="{Binding ColorViewBrush}"
                 CornerRadius="5" />
 
             <Slider
@@ -141,38 +141,52 @@
                 </DockPanel>
             </Grid>
 
-            <UniformGrid
-                Grid.Row="4"
-                Columns="2"
-                Rows="2">
+            <Grid Grid.Row="4">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
                 <Label
-                    Margin="0,0,5,5"
+                    Grid.Column="0"
                     HorizontalAlignment="Stretch"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Content="{Binding ColorHexValue}"
                     FontSize="14" />
 
                 <Button
-                    Margin="0,0,0,5"
+                    Grid.Column="1"
+                    Margin="10,0,0,0"
                     HorizontalAlignment="Stretch"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding CopyColorHexValueCommand}"
                     CommandParameter="{Binding Text, ElementName=ColorHexValueTextBox}"
-                    Content="复制颜色值"
+                    Content="复制HEX"
                     Foreground="{DynamicResource PrimaryBrush}" />
+            </Grid>
+
+            <Grid Grid.Row="5" Margin="0,10,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
 
                 <Label
-                    Margin="0,0,5,0"
+                    Grid.Column="0"
                     HorizontalAlignment="Stretch"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Content="{Binding ColorRgbValue}"
                     FontSize="14" />
 
                 <Button
+                    Grid.Column="1"
+                    Margin="10,0,0,0"
                     HorizontalAlignment="Stretch"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding ColorHexToRgbCommand}"
                     CommandParameter="{Binding Text, ElementName=ColorHexValueTextBox}"
                     Content="转为RGB" />
-            </UniformGrid>
+            </Grid>
         </Grid>
 
         <StackPanel Margin="10,0,0,0">
@@ -190,22 +204,29 @@
                 HorizontalAlignment="Center"
                 BorderBrush="{DynamicResource DevKitBorderBrush}"
                 ItemsSource="{Binding ColorResources}"
-                ScrollViewer.CanContentScroll="False">
+                ScrollViewer.CanContentScroll="False"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Width="185" Background="{Binding Hex}">
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                FontSize="14"
-                                Foreground="{Binding Hex, Converter={StaticResource ColorTagForegroundConverterKey}}"
-                                Text="{Binding Name}" />
+                        <Border
+                            Width="185"
+                            Background="{Binding Hex}"
+                            CornerRadius="5">
+                            <StackPanel VerticalAlignment="Center">
+                                <TextBlock
+                                    HorizontalAlignment="Center"
+                                    FontSize="14"
+                                    Foreground="{Binding Hex, Converter={StaticResource ColorTagForegroundConverterKey}}"
+                                    Text="{Binding Name}" />
 
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                FontSize="14"
-                                Foreground="{Binding Hex, Converter={StaticResource ColorTagForegroundConverterKey}}"
-                                Text="{Binding Hex}" />
-                        </StackPanel>
+                                <TextBlock
+                                    Margin="0,5,0,0"
+                                    HorizontalAlignment="Center"
+                                    FontSize="14"
+                                    Foreground="{Binding Hex, Converter={StaticResource ColorTagForegroundConverterKey}}"
+                                    Text="{Binding Hex}" />
+                            </StackPanel>
+                        </Border>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
 
