refactor(DevKit): 优化颜色资源视图和视图模型
- 调整 ColorResourceView.xaml 中 DockPanel 的 Margin属性
- 修改 ListBox 的背景和边框属性，提升视觉效果- 重构 ColorResourceViewModel 中的颜色资源加载逻辑，使用异步方式
- 优化数据库连接和数据加载，提高性能和响应速度

--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -33,7 +33,7 @@
         <cvt:ColorTagForegroundConverter x:Key="ColorTagForegroundConverterKey" />
     </UserControl.Resources>
 
-    <DockPanel Margin="10" LastChildFill="True">
+    <DockPanel Margin="10,12" LastChildFill="True">
         <Grid Width="200">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -192,7 +192,8 @@
         <ListBox
             Margin="10,0,0,0"
             HorizontalAlignment="Center"
-            BorderBrush="{DynamicResource DevKitBorderBrush}"
+            Background="Transparent"
+            BorderThickness="0"
             ItemsSource="{Binding ColorResources}"
             ScrollViewer.CanContentScroll="False"
             ScrollViewer.VerticalScrollBarVisibility="Auto">
