--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -34,116 +34,130 @@
     </UserControl.Resources>
 
     <DockPanel Margin="10,12" LastChildFill="True">
-        <Grid Width="200">
+        <Grid Width="260">
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <hc:TextBox
-                x:Name="ColorHexValueTextBox"
-                Grid.Row="0"
-                hc:InfoElement.Placeholder="请输入颜色值，如：#000000"
-                hc:InfoElement.ShowClearButton="True"
-                BorderBrush="{DynamicResource DevKitBorderBrush}"
-                FontSize="14"
-                Text="{Binding UserInputColorHexValue}" />
-
-            <Border
-                Grid.Row="1"
-                Margin="0,10"
-                Background="{Binding ColorViewBrush}"
-                CornerRadius="5" />
-
-            <Slider
-                x:Name="AlphaSlider"
-                Grid.Row="2"
-                hc:TipElement.Visibility="Collapsed"
-                IsSnapToTickEnabled="True"
-                Maximum="255"
-                Minimum="0"
-                Value="255">
-                <b:Interaction.Triggers>
-                    <b:EventTrigger EventName="ValueChanged">
-                        <b:InvokeCommandAction Command="{Binding AlphaValueChangedCommand}" CommandParameter="{Binding ElementName=AlphaSlider}" />
-                    </b:EventTrigger>
-                </b:Interaction.Triggers>
-            </Slider>
-
-            <Grid Grid.Row="3" Margin="0,10">
-                <Grid.RowDefinitions>
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-
-                <DockPanel Grid.Row="0" LastChildFill="True">
-                    <Border Style="{StaticResource BorderTipInfo}">
-                        <TextBlock Width="80" Text="透明度（A）" />
-                    </Border>
-
-                    <TextBox
-                        Margin="10,0,0,0"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="{DynamicResource DevKitBorderBrush}"
-                        FontSize="14"
-                        Text="{Binding Value, ElementName=AlphaSlider, Converter={StaticResource AlphaValueConverterKey}}" />
-                </DockPanel>
-
-                <DockPanel
-                    Grid.Row="1"
-                    Margin="0,10"
-                    LastChildFill="True">
-                    <Border Style="{StaticResource BorderTipDanger}">
-                        <TextBlock Width="80" Text="红（R）" />
-                    </Border>
-
-                    <hc:TextBox
-                        Margin="10,0,0,0"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="{DynamicResource DevKitBorderBrush}"
-                        FontSize="14"
-                        Text="{Binding Red}" />
-                </DockPanel>
-
-                <DockPanel Grid.Row="2" LastChildFill="True">
-                    <Border Style="{StaticResource BorderTipSuccess}">
-                        <TextBlock Width="80" Text="绿（G）" />
-                    </Border>
-
-                    <hc:TextBox
-                        Margin="10,0,0,0"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="{DynamicResource DevKitBorderBrush}"
-                        FontSize="14"
-                        Text="{Binding Green}" />
-                </DockPanel>
-
-                <DockPanel
-                    Grid.Row="3"
-                    Margin="0,10,0,0"
-                    LastChildFill="True">
-                    <Border Style="{StaticResource BorderTipPrimary}">
-                        <TextBlock Width="80" Text="蓝（B）" />
-                    </Border>
-
-                    <hc:TextBox
-                        Margin="10,0,0,0"
-                        HorizontalContentAlignment="Center"
-                        BorderBrush="{DynamicResource DevKitBorderBrush}"
-                        FontSize="14"
-                        Text="{Binding Blue}" />
-                </DockPanel>
-            </Grid>
-
-            <Grid Grid.Row="4">
+            <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <hc:TextBox
+                    Grid.Column="0"
+                    hc:InfoElement.Placeholder="请输入HEX颜色值"
+                    hc:InfoElement.ShowClearButton="True"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
+                    FontSize="14"
+                    Text="{Binding UserInputColorHexValue}" />
+
+                <Button
+                    Grid.Column="1"
+                    Margin="10,0,0,0"
+                    HorizontalAlignment="Stretch"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
+                    Command="{Binding ColorHexToRgbCommand}"
+                    Content="转为RGB" />
+            </Grid>
+
+            <UniformGrid
+                Grid.Row="1"
+                Margin="0,10"
+                Columns="3"
+                Rows="2">
+                <TextBox
+                    HorizontalContentAlignment="Center"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
+                    FontSize="14"
+                    Text="{Binding Red}" />
+
+                <TextBox
+                    HorizontalContentAlignment="Center"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
+                    FontSize="14"
+                    Text="{Binding Green}" />
+
+                <TextBox
+                    HorizontalContentAlignment="Center"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
+                    FontSize="14"
+                    Text="{Binding Blue}" />
+
+                <Label
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Center"
+                    Background="Red"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
+                    Content="R"
+                    FontSize="14"
+                    Foreground="White" />
+
+                <Label
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Center"
+                    Background="Green"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
+                    Content="G"
+                    FontSize="14"
+                    Foreground="White" />
+
+                <Label
+                    HorizontalAlignment="Stretch"
+                    HorizontalContentAlignment="Center"
+                    Background="Blue"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
+                    Content="B"
+                    FontSize="14"
+                    Foreground="White" />
+            </UniformGrid>
+
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <Border
+                    Grid.Column="0"
+                    Background="{Binding ColorViewBrush}"
+                    CornerRadius="5" />
+
+                <Grid Grid.Column="1" Margin="10,0,0,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Slider
+                        x:Name="AlphaSlider"
+                        Grid.Row="0"
+                        HorizontalAlignment="Center"
+                        hc:TipElement.Visibility="Collapsed"
+                        IsSnapToTickEnabled="True"
+                        Maximum="255"
+                        Minimum="0"
+                        Orientation="Vertical"
+                        Value="255">
+                        <b:Interaction.Triggers>
+                            <b:EventTrigger EventName="ValueChanged">
+                                <b:InvokeCommandAction Command="{Binding AlphaValueChangedCommand}" CommandParameter="{Binding ElementName=AlphaSlider}" />
+                            </b:EventTrigger>
+                        </b:Interaction.Triggers>
+                    </Slider>
+
+                    <TextBlock Grid.Row="1" Text="{Binding Value, ElementName=AlphaSlider, Converter={StaticResource AlphaValueConverterKey}}" />
+                </Grid>
+            </Grid>
+
+            <Grid Grid.Row="3" Margin="0,10,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
@@ -156,36 +170,18 @@
 
                 <Button
                     Grid.Column="1"
-                    Margin="10,0,0,0"
+                    Margin="10,0"
                     HorizontalAlignment="Stretch"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding CopyColorHexValueCommand}"
-                    CommandParameter="{Binding Text, ElementName=ColorHexValueTextBox}"
                     Content="复制HEX"
                     Foreground="{DynamicResource PrimaryBrush}" />
-            </Grid>
 
-            <Grid Grid.Row="5" Margin="0,10,0,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-
-                <Label
-                    Grid.Column="0"
-                    HorizontalAlignment="Stretch"
+                <CheckBox
+                    Grid.Column="2"
+                    VerticalAlignment="Center"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
-                    Content="{Binding ColorRgbValue}"
-                    FontSize="14" />
-
-                <Button
-                    Grid.Column="1"
-                    Margin="10,0,0,0"
-                    HorizontalAlignment="Stretch"
-                    BorderBrush="{DynamicResource DevKitBorderBrush}"
-                    Command="{Binding ColorHexToRgbCommand}"
-                    CommandParameter="{Binding Text, ElementName=ColorHexValueTextBox}"
-                    Content="转为RGB" />
+                    Content="透明度" />
             </Grid>
         </Grid>
 
@@ -200,7 +196,7 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Border
-                        Width="185"
+                        Width="165"
                         Height="60"
                         Background="{Binding Hex}"
                         CornerRadius="5">
@@ -213,7 +209,6 @@
                             <TextBlock
                                 Grid.Row="0"
                                 HorizontalAlignment="Center"
-                                FontSize="14"
                                 Foreground="{Binding Hex, Converter={StaticResource ColorTagForegroundConverterKey}}"
                                 Text="{Binding Name}" />
 
@@ -221,7 +216,6 @@
                                 Grid.Row="1"
                                 Margin="0,5,0,0"
                                 HorizontalAlignment="Center"
-                                FontSize="14"
                                 Foreground="{Binding Hex, Converter={StaticResource ColorTagForegroundConverterKey}}"
                                 Text="{Binding Hex}" />
                         </Grid>
