feat(ColorResource): 添加透明度复选框事件处理
- 在 ColorResourceView.xaml 中添加透明度复选框的 Checked 和 Unchecked事件处理方法
- 在 ColorResourceView.xaml.cs 中实现对应的事件处理逻辑
- 在 ColorResourceViewModel.cs 中添加 CheckBoxCheckedCommand 和 CheckBoxUncheckedCommand 命令
- 实现 OnAlphaChecked 和 OnAlphaUnChecked 方法来处理透明度复选框的选中和取消选中逻辑

--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -168,8 +168,10 @@
                     Grid.Column="2"
                     VerticalAlignment="Center"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
+                    Checked="CheckBox_OnChecked"
                     Content="透明度"
-                    IsChecked="{Binding IsAlphaBoxChecked}" />
+                    IsChecked="{Binding IsAlphaBoxChecked}"
+                    Unchecked="CheckBox_OnUnchecked" />
             </Grid>
         </Grid>
 
