feat(ColorResource): 改进颜色转换和透明度控制
- 添加 SliderValue 属性，用于绑定滑块值
- 优化颜色转换逻辑，支持 RGB 和 RGBA 格式
- 移除对 Slider 控件的直接引用，改为使用 SliderValue
- 重构 AlphaValueChanged 方法，根据 SliderValue 更新颜色- 增加对无效颜色值和长度不正确的情况的错误提示

--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -126,10 +126,10 @@
                         Maximum="255"
                         Minimum="0"
                         Orientation="Vertical"
-                        Value="255">
+                        Value="{Binding SliderValue}">
                         <b:Interaction.Triggers>
                             <b:EventTrigger EventName="ValueChanged">
-                                <b:InvokeCommandAction Command="{Binding AlphaValueChangedCommand}" CommandParameter="{Binding ElementName=AlphaSlider}" />
+                                <b:InvokeCommandAction Command="{Binding AlphaValueChangedCommand}" />
                             </b:EventTrigger>
                         </b:Interaction.Triggers>
                     </Slider>
