--- a/DevKit/Dialogs/ScreenShotListDialog.xaml
+++ b/DevKit/Dialogs/ScreenShotListDialog.xaml
@@ -2,11 +2,12 @@
     x:Class="DevKit.Dialogs.ScreenShotListDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cvt="clr-namespace:DevKit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
-    Width="615"
+    Width="605"
     Height="400"
     d:DataContext="{d:DesignInstance Type=vm:ScreenShotListDialogViewModel}"
     Background="{DynamicResource DevKitBackgroundBrush}"
@@ -25,6 +26,8 @@
         <Style TargetType="TextBlock">
             <Setter Property="FontSize" Value="14" />
         </Style>
+
+        <cvt:ButtonVisibilityConverter x:Key="ButtonVisibilityConverterKey" />
     </UserControl.Resources>
 
     <Grid>
@@ -65,7 +68,8 @@
 
         <Grid Grid.Row="2" Margin="10">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
@@ -78,6 +82,16 @@
 
             <Button
                 Grid.Column="1"
+                Margin="10,0"
+                HorizontalAlignment="Left"
+                Command="{Binding DeleteScreenshotCommand}"
+                CommandParameter="{Binding ElementName=ScreenshotsListBox, Path=SelectedItem}"
+                Content="删除"
+                Style="{StaticResource ButtonDanger}"
+                Visibility="{Binding Screenshots.Count, Converter={StaticResource ButtonVisibilityConverterKey}}" />
+
+            <Button
+                Grid.Column="2"
                 HorizontalAlignment="Right"
                 Command="{Binding OutputScreenshotCommand}"
                 CommandParameter="{Binding ElementName=ScreenshotsListBox, Path=SelectedItem}"
