feat(AndroidDebugBridge): 添加设备关机功能并优化界面布局
- 在 AndroidDebugBridgeView.xaml 中添加设备关机按钮
- 在 AndroidDebugBridgeViewModel.cs 中实现设备关机功能
- 调整按钮之间的间距，使界面更加美观

--- a/DevKit/Views/AndroidDebugBridgeView.xaml
+++ b/DevKit/Views/AndroidDebugBridgeView.xaml
@@ -210,7 +210,7 @@
                     Content="导出截屏" />
 
                 <Button
-                    Margin="5,3,0,3"
+                    Margin="5,3,5,3"
                     HorizontalAlignment="Stretch"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding ScreenshotCommand}"
@@ -223,11 +223,17 @@
                     Content="安装软件" />
 
                 <Button
-                    Margin="5,3,0,3"
                     HorizontalAlignment="Stretch"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding RebootDeviceCommand}"
                     Content="重启设备" />
+
+                <Button
+                    Margin="5,0,5,0"
+                    HorizontalAlignment="Stretch"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
+                    Command="{Binding ShutdownDeviceCommand}"
+                    Content="设备关机" />
             </UniformGrid>
         </Grid>
 
