feat(network): 获取并展示所有IPv4地址
- 修改 GetIPv4Address 方法返回类型为 List<string>- 更新 IAppDataService 接口中的方法签名
- 在 TCP、UDP 和 WebSocket 服务器视图中使用 ComboBox 替代 TextBox
- 绑定 LocalHostSource 到 ComboBox 的 ItemsSource- 添加 HostSelectedCommand 处理主机选择变更
- 使用选中的主机地址启动服务监听
- 初始化时默认选择第一个 IPv4 地址

--- a/DevKit/Views/TcpServerView.xaml
+++ b/DevKit/Views/TcpServerView.xaml
@@ -53,14 +53,21 @@
                     VerticalAlignment="Center"
                     Text="本机地址" />
 
-                <hc:TextBox
+                <ComboBox
+                    x:Name="HostComboBox"
                     Margin="10,0"
                     VerticalAlignment="Center"
-                    hc:InfoElement.Placeholder="127.0.0.1"
-                    hc:InfoElement.ShowClearButton="True"
+                    VerticalContentAlignment="Center"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
-                    Text="{Binding LocalHost}"
-                    TextWrapping="NoWrap" />
+                    FontSize="14"
+                    ItemsSource="{Binding LocalHostSource}"
+                    SelectedIndex="0">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="SelectionChanged">
+                            <b:InvokeCommandAction Command="{Binding HostSelectedCommand}" CommandParameter="{Binding ElementName=HostComboBox, Path=SelectedItem}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </ComboBox>
             </DockPanel>
 
             <DockPanel
